--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-requests~=2.27.1
+requests
 wikipedia~=1.4.0
 python-dotenv~=0.21.0
 beautifulsoup4~=4.11.1
-discord~=2.2.3
+discord.py
 asyncer~=0.0.2
-discord~=2.2.3
